# HJ-ci

./: .gitignore  CMakeLists.txt  MAKESYSTEM.md  README.md  REMOTE.md  TODO  baogang.md  tags
cmake/: compiler.cmake  gmock.cmake
gmock-1.7.0/gtest/include/gtest/: gtest.h
script/: bashrc_sample  ci_profile_master.sh  ci_profile_spare.sh  clean_log.sh  copy.bat  gen_device_name.py  hard_copy_system.sh  hmi_heart.py  install.sh  make_bootable_device.sh  ntpdate_update.sh  parser_log.py  rc.local.example  scp.sh  tar.sh  test.py  test.sh  transfer_file.py  transfer_shell.sh
settings/: app_config - bgcpkz.h  app_config - bgfylz.h  app_config - cnz.h  app_config(125组道岔).h  bzz.cfg  bzz.jdb  bzz.lsb  bzz.syb  cnz.cfg  cnz.jdb  cnz.lsb  cnz.syb  platform.xml  platform_bzz.xml  platform_cnz.xml
src/: CMakeLists.txt  README
src/interlocking/: app_config.c  auto_unlock.c  auto_unlock.h  base_type_definition.h  cancel_route.c  cancel_route.h  check_ci_condition.c  check_ci_condition.h  check_lock_route.c  check_lock_route.h  data_struct_definition.h  error_process.c  error_process.h  global_data.c  global_data.h  guide_route.c  guide_route.h  hold_route_shunting.c  hold_route_shunting.h  init_manage.c  init_manage.h  inter_api.c  inter_api.h  keep_signal.c  keep_signal.h  open_signal.c  open_signal.h  process_command.c  process_command.h  read_CFG.c  read_ILT.c  read_SNT.c  relay_cancel_route.c  relay_cancel_route.h  repeated_open_signal.c  route_control.c  route_control.h  search_route.c  search_route.h  section_unlock.c  (+14 more)
src/platform/: app.c  app.h  cfg_manage.c  cfg_manage.h  communicate_state_int.c  communicate_state_int.h  cpu_heartbeat_int.c  cpu_heartbeat_int.h  cpu_manage.c  cpu_manage.h  cycle_int.c  cycle_int.h  device_type.h  eeu_manage.c  eeu_manage.h  eeu_manage_win.c  eeu_manage_win.h  failures_int.c  failures_int.h  hmi_manage.c  hmi_manage.h  led_int.c  led_int.h  linux_app.c  local_log.c  local_log.h  main.c  monitor.c  monitor.h  patchlevel.h  performance.c  performance.h  platform_api.h  remote_log.c  remote_log.h  series_heartbeat_int.c  series_heartbeat_int.h  series_manage.c  series_manage.h  sig.c  (+11 more)
src/syn_data/: cfg_syn.c  cfg_syn.h  cpu_heartbeat.c  cpu_heartbeat.h  input_syn.c  input_syn.h  new_cycle_syn.c  new_cycle_syn.h  result_syn.c  result_syn.h  series_heartbeat.c  series_heartbeat.h  syn_type.h
src/util/: algorithms.c  algorithms.h  app_config.h  ci_header.h  config.c  config.h  log.c  log.h  sig_str.c  sig_str.h  utility.c  utility.h
test/: CMakeLists.txt  sample_gmock_test.cpp
test/interlocking/: CMakeLists.txt
test/platform/: CMakeLists.txt  inter_api_for_test.c  platform_all.cpp  test_hmi_manage.cpp  test_local_log.cpp  test_performance.cpp  test_remote_log.cpp
test/platform/data/hmi_manage/: Normal.xml  ip_empty.xml  ip_wrong1.xml  ip_wrong2.xml  ip_wrong3.xml  ip_wrong4.xml  no_ip.xml  no_port.xml  port_empty.xml  port_wrong1.xml  port_wrong2.xml  port_wrong3.xml
test/platform/data/local_log/: Normal.xml  config_empty.xml  name_too_long.xml  not_config.xml
test/platform/data/performance/: Normal.xml  ip_empty.xml  ip_wrong1.xml  ip_wrong2.xml  ip_wrong3.xml  ip_wrong4.xml  port_empty.xml  port_wrong1.xml  port_wrong2.xml
test/platform/data/remote_log/: Normal.xml  ip_not_config.xml  ip_wrong1.xml  ip_wrong2.xml  ip_wrong3.xml  ip_wrong4.xml  port_not_config.xml  port_wrong1.xml  port_wrong2.xml  port_wrong3.xml
test/util/: CMakeLists.txt  test_algorithms.cpp  test_config.cpp  test_log.cpp  test_sig_str.cpp  test_utility.cpp
test/util/data/algorithms/: 2  3
test/util/data/config/: ConfigurationNodeExceed.xml  DeviceIdDefineWrong.xml  DeviceIdUndefine.xml  GetDeviceId_Normal.xml  Normal.xml  NotWellFormed.xml  PropertyNodeExcced.xml  RootElementMulti.xml  RootElementNotConfiguration.xml
